@@ -44,7 +44,6 @@ import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Supplier;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.indices.SystemIndices.EXTERNAL_SYSTEM_INDEX_ACCESS_CONTROL_HEADER_KEY;
 import static org.elasticsearch.indices.SystemIndices.SYSTEM_INDEX_ACCESS_CONTROL_HEADER_KEY;
@@ -97,7 +96,8 @@ public class RestController implements HttpServerTransport.Dispatcher {
         UnaryOperator<RestHandler> handlerWrapper,
         NodeClient client,
         CircuitBreakerService circuitBreakerService,
-        UsageService usageService) {
+        UsageService usageService
+    ) {
         this.headersToCopy = headersToCopy;
         this.usageService = usageService;
         if (handlerWrapper == null) {
@@ -437,7 +437,6 @@ public class RestController implements HttpServerTransport.Dispatcher {
     private void tryAllHandlers(final RestRequest request, final RestChannel channel, final ThreadContext threadContext) throws Exception {
         try {
             copyRestHeaders(request, threadContext);
-            channel.startTrace(threadContext);
             validateErrorTrace(request, channel);
         } catch (IllegalArgumentException e) {
             channel.sendResponse(BytesRestResponse.createSimpleErrorResponse(channel, BAD_REQUEST, e.getMessage()));
@@ -467,15 +466,20 @@ public class RestController implements HttpServerTransport.Dispatcher {
                         return;
                     }
                 } else {
+                    channel.setTracePath(handlers.getPath());
+                    channel.startTrace();
                     dispatchRequest(request, channel, handler, threadContext);
                     return;
                 }
             }
         } catch (final IllegalArgumentException e) {
+            channel.startTrace();
+            channel.recordException(e);
             handleUnsupportedHttpMethod(uri, null, channel, getValidHandlerMethodSet(rawPath), e);
             return;
         }
         // If request has not been handled, fallback to a bad request error.
+        channel.startTrace();
         handleBadRequest(uri, requestMethod, channel);
     }
 
@@ -492,7 +496,7 @@ public class RestController implements HttpServerTransport.Dispatcher {
             final String name = restHeader.getName();
             final List<String> headerValues = request.getAllHeaderValues(name);
             if (headerValues != null && headerValues.isEmpty() == false) {
-                final List<String> distinctHeaderValues = headerValues.stream().distinct().collect(Collectors.toList());
+                final List<String> distinctHeaderValues = headerValues.stream().distinct().toList();
                 if (restHeader.isMultiValueAllowed() == false && distinctHeaderValues.size() > 1) {
                     throw new IllegalArgumentException("multiple values for single-valued header [" + name + "].");
                 } else if (name.equals(Task.TRACE_PARENT_HTTP_HEADER)) {
@@ -500,8 +504,10 @@ public class RestController implements HttpServerTransport.Dispatcher {
                     if (traceparent.length() >= 55) {
                         final String traceId = traceparent.substring(3, 35);
                         threadContext.putHeader(Task.TRACE_ID, traceId);
-                        threadContext.putHeader(Task.TRACE_PARENT_HTTP_HEADER, traceparent);
+                        threadContext.putHeader("parent_" + Task.TRACE_PARENT_HTTP_HEADER, traceparent);
                     }
+                } else if (name.equals(Task.TRACE_STATE)) {
+                    threadContext.putHeader("parent_" + Task.TRACE_STATE, distinctHeaderValues.get(0));
                 } else {
                     threadContext.putHeader(name, String.join(",", distinctHeaderValues));
                 }
@@ -676,13 +682,28 @@ public class RestController implements HttpServerTransport.Dispatcher {
         }
 
         @Override
-        public void startTrace(ThreadContext threadContext) {
-            delegate.startTrace(threadContext);
+        public void startTrace() {
+            delegate.startTrace();
         }
 
         @Override
         public void stopTrace() {
             delegate.stopTrace();
+        }
+
+        @Override
+        public void recordException(Throwable throwable) {
+            delegate.recordException(throwable);
+        }
+
+        @Override
+        public void setTracePath(String path) {
+            delegate.setTracePath(path);
+        }
+
+        @Override
+        public String getTracePath() {
+            return delegate.getTracePath();
         }
     }
 
